# EutherEtcher

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  release.yml
assets/music/: ACE_STEP_PROVENANCE.md  README.md  music.toml
examples/: eutheretcher.toml
packaging/: dev.euther.EutherEtcher.policy  eutheretcher.desktop
scripts/: install-desktop.sh  package-appimage.sh  package-deb.sh
src/: cancel.rs  config.rs  device.rs  error.rs  gui.rs  image.rs  main.rs  music.rs  safety.rs  verify.rs  writer.rs
