[package]
name = "eutheretcher"
version = "0.1.0"
edition = "2021"
description = "Linux-first CLI image writer for USB and SD devices"
license = "MIT"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
indicatif = "0.17"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
toml = "0.8"
