[package]
name = "eutheretcher"
version = "0.1.0"
edition = "2021"
description = "Linux-first CLI image writer for USB and SD devices"
license = "MIT"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
eframe = "0.34.3"
indicatif = "0.17"
rodio = { version = "0.22", default-features = false, features = ["playback", "flac", "vorbis", "wav"] }
rfd = "0.17"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
thiserror = "1.0"
toml = "0.8"
